@@ -1,3 +1,9 @@
+2005-10-09 Scott Dattalo <scott@dattalo.com>
+	* src/pic-instructions.cc, src/pic-instructions.h: Added methods
+	to the instruction class that provide acces to the source defining
+	an instruction (this is going to be used with tracing and
+	disassembly soon).
+
 2005-10-11 Borut Razem <borut.razem@siol.net>
 	* regression/usart_test/usart_test.asm, regression/logic_test/logic_test.asm,
 	  modules/makefile.mingw, gui/gui_breadbord.cc, plat/win32/gpsim.nsi:
